fix more layout issues

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -5,14 +5,20 @@ html, body {
   /* font-family: 'Montserrat', sans-serif; */
   font-family: 'Cabin', sans-serif;
   color: #393230 !important;
+  -webkit-font-smoothing: antialiased;
 }  
 
-h1, h2, h3 {
+h1, h2 {
   font-weight: 700;
 }
 
+h2 {
+  font-size: 1.5rem;
+}
+
 h3 {
-  font-size: 24px;
+  font-size: 1.4rem;
+  font-weight: 500;
 }
 
 a {
@@ -42,94 +48,106 @@ a {
 
 .grid-container {
   display: grid;
-  /* width: 97%;
-  padding: 1% 3%; */
   width: calc(100% - 4rem);
   margin-left: 2rem;
-  /* grid-template-rows: auto;
-  grid-template-columns: repeat(4, 1fr); */
-  /* grid-gap: 30px; */
   grid-template-rows: auto;
-  grid-template-columns: [week] 1fr [main] 5fr;
+  grid-template-columns: [week] 1fr [main] 6fr;
   align-items: start;
   justify-items: stretch;
 }
 
 .week {
-  /* grid-row-start: 1;
-  grid-column-start: 1;
-  grid-row-end: 2;
-  grid-column-end: 5; */
-  /* grid-area: 1 / 1 / 2 / 5; */
   grid-column: week;
+  overflow-x: scroll;
 }
 
-/* .create-buttons-container {
-  grid-area: 1 / 3 / 2 / 5;
-  height: 100%;
-  display: grid;
-  align-items: center;
-  justify-content: center;
-} */
+main {
+  grid-column: main;
+  height: 100vh;
+  overflow: auto;
+}
 
 .day-food-grid {
-  /* grid-area: 2 / 1 / 3 / 5; */
-  grid-column: main;
   margin-top: 1rem;
   margin-bottom: 2rem;
   display: grid;
   grid-template-rows: auto;
-  /* grid-template-columns: repeat(3, 1fr); */
   grid-template-columns: [day] 1fr [food] 3fr;
-  grid-gap: 30px;
+  grid-gap: 2rem;
   align-items: start;
   justify-items: stretch;
 }
   
 .day {
-  /* grid-row-start: 2;
-  grid-column-start: 1;
-  grid-row-end: 3;
-  grid-column-end: 2; */
-  /* grid-area: 1 / 1 / 2 / 2; */
   grid-column: day;
 }
   
 .food {
-  /* grid-row-start: 2;
-  grid-column-start: 2;
-  grid-row-end: 3;
-  grid-column-end: 4; */
-  /* grid-area: 1 / 2 / 2 / 4; */
   grid-column: food;
 
   display: grid;
-  grid-template-rows: auto;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 30px;
+  grid-template-rows: [header] auto [food-tables] auto;
+  grid-template-columns: auto;
+  /* grid-template-columns: [meal] 1fr [snack] 1fr [beverage] 1fr; */
+  grid-gap: 2rem;
   align-items: start;
   justify-items: stretch;
 }
 
-.meal {
-  grid-area: 2 / 1 / 3 / 2;
+.food-header {
+  grid-row: header;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
 }
 
-.snack {
-  grid-area: 2 / 2 / 3 / 3;
+.food-tables {
+  grid-row: food-tables;
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  align-items: start;
+  justify-items: stretch;
 }
 
-.beverage {
-  grid-area: 2 / 3 / 3 / 4;
+@media (max-width: 1230px) {
+  .food-tables {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
-  
+
+@media (max-width: 960px) {
+  .food-tables {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .grid-container {
+    width: 100%;
+    grid-template-columns: 1fr;
+    margin-left: 0;
+  }
+
+  .food-header {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  main {
+    overflow: visible;
+  }
+}
+
+@media (max-width: 520px) {
+  .day-food-grid {
+    grid-template-columns: 1fr;
+    grid-gap: 2rem 0;
+  }
+}
+
 .ingredients {
-  /* grid-row-start: 2;
-  grid-column-start: 4;
-  grid-row-end: 3;
-  grid-column-end: 5; */
-  /* grid-area: 3 / 1 / 4 / 5; */
-  grid-column: main;
+  margin-bottom: 2rem;
 }
 
 .card-style {
